--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
-  <title>docsify-cli - A magical documentation generator.</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="A magical documentation generator.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
+  <meta name="referrer" content="no-referrer">
+  <!-- old/original stylesheet <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">-->
+  <link rel="stylesheet" href="style.css" type="text/css">
+  <title>Train-the Trainer</title>
 </head>
 <body>
   <div id="app"></div>
-  <script>
-    window.$docsify = {
-      name: 'docsify-cli',
-      repo: 'docsifyjs/docsify-cli'
-    }
-  </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 </body>
+<script>
+  window.$docsify = {
+    el: "#app",
+    //repo: 'https://github.com/pilotta314/trainthetrainer',
+    loadSidebar: true,
+    name: 'Train-the Trainer',
+    logo: '/images/twillo_logo.svg height="50"',
+    auto2top: true,
+    noEmoji: true,
+    executeScript: true,
+    loadFooter: true,
+    pagination: {
+      previousText: 'ZURÜCK',
+      nextText: 'VOR',
+      crossChapter: true
+      },
+  }
+</script>
+<script type="text/javascript" src="js/accordeon.js"></script>
+<script type="text/javascript" src="js/dragdrop.js"></script>
+<script type="text/javascript" src="js/quiz.js"></script>
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+<script src="docsify/docsify.min.js"></script>
+<script src="docsify/docsify-copy-code.min.js"></script>
+<script src="docsify/docsify-pagination.min.js"></script>
+<script src="docsify/prism-bash.min.js"></script>
+<script src="docsify/search.min.js"></script>
+<script src="docsify/zoom-image.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
 </html>
