--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="referrer" content="no-referrer">
   <!-- old/original stylesheet <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">-->
   <link rel="stylesheet" href="style.css" type="text/css">
-  <title>Train-the Trainer</title>
+  <title>Buch</title>
 </head>
 <body>
   <div id="app"></div>
@@ -17,9 +17,9 @@
 <script>
   window.$docsify = {
     el: "#app",
-    //repo: 'https://github.com/pilotta314/trainthetrainer',
+    //repo: 'https://github.com/mahsankavyani/testBuch/blob',
     loadSidebar: true,
-    name: 'Train-the Trainer',
+    name: 'Buch',
     logo: '/images/twillo_logo.svg height="50"',
     auto2top: true,
     noEmoji: true,
